--- a/css/inbrief.webflow.css
+++ b/css/inbrief.webflow.css
@@ -225,7 +225,7 @@ h2 {
   margin-right: 10px;
   margin-left: 10px;
   border-radius: 15px;
-  box-shadow: 0 0 10px 3px rgba(0, 0, 0, .05);
+  box-shadow: 0 1px 10px 3px rgba(0, 0, 0, .05);
 }
 
 .article {
@@ -807,4 +807,521 @@ h2 {
 
 .add-image {
   height: 11px;
+}
+
+.card-body-edit {
+  position: relative;
+  overflow: auto;
+  height: auto;
+  min-height: 350px;
+  padding: 17px 30px;
+  background-color: #fff;
+}
+
+.edit-elements-wrapper {
+  padding-top: 0px;
+  padding-bottom: 20px;
+}
+
+.twitter-login-button {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 40px;
+  margin-top: 13px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 5px;
+  background-color: #1da1f2;
+  color: #1a1a1a;
+  font-weight: 300;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.button-text {
+  display: inline-block;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  color: #fff;
+}
+
+.twitter-button-image {
+  height: 20px;
+  margin-right: 8px;
+}
+
+.list-dropdown {
+  display: block;
+  margin-top: 13px;
+}
+
+.dropdown-toggle {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 40px;
+  padding-top: 0px;
+  padding-right: 20px;
+  padding-bottom: 0px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+}
+
+.dropdown-icon {
+  height: 10px;
+}
+
+.dropdown-list {
+  font-weight: 100;
+}
+
+.dropdown-list.w--open {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  background-color: #ebebeb;
+  font-weight: 300;
+}
+
+.edit-state-steps {
+  font-weight: 600;
+}
+
+.dropdown-link {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.landing-page-body {
+  background-color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  color: #1a1a1a;
+}
+
+.section {
+  max-height: 100vh;
+  min-height: 700px;
+  background-image: url('../images/pexels-photo.png');
+  background-position: 50% 0px;
+  background-size: 200%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.landing-page-logo-container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+}
+
+.landing-page-hero-text {
+  padding-right: 100px;
+  padding-left: 100px;
+  font-size: 55px;
+  line-height: 120%;
+  font-weight: 700;
+  text-align: center;
+}
+
+.download-button {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 235px;
+  margin-right: 18px;
+  margin-left: 18px;
+  padding: 18px 50px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 30px;
+  background-color: #9381ff;
+  box-shadow: 3px 0 20px 3px rgba(147, 129, 255, .2);
+  color: #fff;
+  font-size: 16px;
+  font-weight: 300;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.download-button.outline-button {
+  border: 1px solid #9381ff;
+  background-color: transparent;
+  color: #1a1a1a;
+}
+
+.div-block {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 40px 81px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.hero-container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 0px;
+  padding-bottom: 50px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+}
+
+.image {
+  margin-right: 9px;
+}
+
+.landing-page-logo {
+  height: 90px;
+}
+
+.landing-page-second-section {
+  min-height: 700px;
+}
+
+.landing-page-preview-container {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: -280px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+}
+
+.image-2 {
+  width: 100%;
+  border: 1px solid #eee;
+  border-radius: 5px;
+  cursor: default;
+}
+
+.heading-3 {
+  text-align: center;
+}
+
+.container-2 {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.row {
+  padding-top: 75px;
+  padding-bottom: 63px;
+}
+
+.image-3 {
+  height: 47px;
+  max-height: 100%;
+}
+
+.text-block {
+  font-size: 18px;
+  line-height: 120%;
+  font-weight: 700;
+}
+
+.div-block-2 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 230px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+}
+
+.div-block-3 {
+  margin-left: 17px;
+}
+
+.text-block-2 {
+  margin-top: 2px;
+  font-weight: 300;
+}
+
+.row-2 {
+  margin-right: 0px;
+  margin-left: 0px;
+  padding-top: 0px;
+  padding-bottom: 76px;
+}
+
+.column {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-right: 0px;
+  padding-left: 0px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.div-block-4 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.buttons-wrapper {
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px 30px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.ok-button {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 5px 25px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 3px;
+  background-color: #f2f2f2;
+  color: #1a1a1a;
+}
+
+.delete-button {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 5px 25px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 3px;
+  background-color: #f21d6d;
+  color: #fff;
+}
+
+.rss-feed-text-area {
+  margin-top: 13px;
+  margin-bottom: 0px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-color: #e6e6e6;
+  border-radius: 5px;
+}
+
+.rss-feed-text-area:focus {
+  border-color: #9381ff;
+}
+
+.rss-feed-name {
+  margin-top: 13px;
+}
+
+.add-button-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.add-button-gray {
+  width: 24px;
+  height: 24px;
+  margin-top: 16px;
+}
+
+.card-body-edit-small {
+  position: relative;
+  overflow: auto;
+  height: auto;
+  min-height: 180px;
+  padding: 17px 30px;
+  background-color: #fff;
+}
+
+@media (max-width: 767px) {
+  .section {
+    background-position: 50% 0px;
+    background-size: 400%;
+  }
+  .landing-page-hero-text {
+    color: #1a1a1a;
+    font-size: 30px;
+  }
+  .download-button {
+    padding-right: 10px;
+    padding-left: 10px;
+    font-size: 14px;
+  }
+  .div-block {
+    padding-right: 60px;
+    padding-left: 60px;
+  }
+  .landing-page-logo {
+    height: 60px;
+  }
+  .container-2 {
+    padding-right: 12px;
+    padding-left: 12px;
+  }
+  .row {
+    padding-top: 43px;
+    padding-bottom: 1px;
+  }
+  .image-3 {
+    width: 47px;
+  }
+  .div-block-4 {
+    padding-top: 19px;
+    padding-bottom: 19px;
+  }
+}
+
+@media (max-width: 479px) {
+  .section {
+    background-size: 650%;
+  }
+  .landing-page-hero-text {
+    padding-right: 13px;
+    padding-left: 13px;
+  }
+  .download-button {
+    width: auto;
+    margin-bottom: 14px;
+    font-size: 14px;
+  }
+  .div-block {
+    padding-right: 0px;
+    padding-left: 0px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
 }
